<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Emmenia</string>
    <string name="textfield">Комментарий:</string>
    <string name="datefield">Дата:</string>
    <string name="iconfield">Мое состояние:</string>
    <string name="entertext">Введите текст</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="deleteAll">Удалить все</string>
    <string name="cancel">Отмена</string>
    <string name="icon">Icon</string>
    <string name="Statistic">Подробно о цикле</string>
    <string name="Settings">Настройки</string>    
    <string name="exit">Выход</string>
    <string name="add">Добавить</string>
    <string name="days">Цикл:</string>
    <string name="no_date">Неизвестно</string>
    <string name="no_period">-</string>
    <string name="day">Дн:</string>
    <string name="prefTitle">Emmenia: Настройки</string>
    <string name="statTitle">Подробно о цикле</string>
    <string name="prefCommon">Общие</string>
    <string name="prefAdditional">Дополнительные</string>
    <string name="prefInterface">Интерфейс</string>
    <string name="autoCalc">Расчитывать период</string>
    <string name="autoCalcSum">Автоматический расчет периода</string>
    <string name="period">Точный период</string>
    <string name="firstscreen">При запуске открывать</string>
    <string name="Additional">Фазы цикла</string>
    <string name="phasedate">Дни цикла с</string>
    <string name="to">по</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="description">Описание</string>
    <string name="iconphase">Иконка фазы</string>
    <string name="pref"> &lt; </string>
    <string name="next"> &gt; </string>
	
    <string-array name="day_of_month">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вс</item>
    </string-array>
    
    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
    
    <string-array name="screensValue">
        <item>list</item>
        <item>calendar</item>
    </string-array>
    
    <string-array name="screens">
        <item>Список</item>
        <item>Календарь</item>
    </string-array>
</resources>