<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory
		android:title="@string/prefCommon">
	
	    <CheckBoxPreference
			android:key="autoCalc"
			android:title="@string/autoCalc"
			android:defaultValue="true"
			android:summary="@string/autoCalcSum"
			android:disableDependentsState="true"
			/>

	    <EditTextPreference
			android:key="period"
			android:title="@string/period"
			android:defaultValue="28"
			android:summary=" "
			android:dependency="autoCalc"
			android:numeric="decimal"
			android:maxLength="2"
			 
			 />
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/prefAdditional">
		<Preference
			 android:key="additional"
			 android:title="@string/Additional"
			/>
    </PreferenceCategory> 
</PreferenceScreen>