<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	android:orientation="vertical" > 

	<LinearLayout 
		android:id="@+id/buttons" 
		android:orientation="horizontal" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_alignParentBottom="true" > 
		<Button
	        android:id="@+id/butSave"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/save"
	    />
		
		<Button
	        android:id="@+id/butCancel"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/cancel"
	    />
		
	</LinearLayout> 
	
	<ScrollView 
		android:layout_above="@id/buttons" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent" 
		android:fillViewport="true">
		 
		<LinearLayout 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:orientation="vertical" > 
		
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/datefield"
				style="@style/TextStyle"
			/>
		    
			<DatePicker
			    android:id="@+id/Date"
				android:startYear="1900"
				android:endYear="2100"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
		
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/textfield"
				style="@style/TextStyle"
			/>
		
			<EditText
				android:id="@+id/DescText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/entertext"
			/>
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/iconfield"
				style="@style/TextStyle"
			/>
		
			<Gallery  
				android:id="@+id/gallery"  
				android:layout_width="fill_parent"  
				android:layout_height="wrap_content"
			/>
		
		</LinearLayout> 
	</ScrollView> 
</RelativeLayout>